--- a/public/index.html
+++ b/public/index.html
@@ -17,11 +17,11 @@
         <div class="menu-icon" id="menu-toggle">☰</div> <!-- Botón de menú -->
         <ul id="nav-list">
             <li><a href="index.html">Home</a></li>
-            <li><a href="#">Meet us</a></li>
-            <li><a href="exobirthday.html">Exopedy</a></li>
+            <li><a href="aboutus">Meet us</a></li>
+            <li><a href="#">Exopedy</a></li>
             <li><a href="videoplayer.html">SpaceTube</a></li>
-            <li><a href="#">Cosmic Test</a></li>
-            <li><a href="#">Exobirthday</a></li>
+            <li><a href="kahoot.html">Cosmic Test</a></li>
+            <li><a href="exobirthday.html">Exobirthday</a></li>
         </ul>
     </header>
 
