--- a/public/videoplayer.html
+++ b/public/videoplayer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="videostyle.css">
+    <link rel="stylesheet" type="text/css" href="css/videostyle.css">
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <title>SpaceTube</title>
@@ -16,7 +16,7 @@
         <a class="btn btn-secondary" id="back" href="index.html">Back</a>
         <div class="main-video">
             <div class="video">
-                <video src="Video1.mp4" controls muted autoplay></video>
+                <video src="https://www.youtube.com/watch?v=a5uQMwRMHcs" controls muted autoplay></video>
                 <h3 class="title">01. Kepler - 11 f - BEYONDSIGHT Team</h3>
             </div>
         </div>
