--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,8 @@
         <div class="menu-icon" id="menu-toggle">☰</div> <!-- Botón de menú -->
         <ul id="nav-list">
             <li><a href="index.html">Home</a></li>
-            <li><a href="aboutus">Meet us</a></li>
-            <li><a href="#">Exopedy</a></li>
+            <li><a href="aboutus.html">Meet us</a></li>
+            <li><a href="exopedy.html">Exopedy</a></li>
             <li><a href="videoplayer.html">SpaceTube</a></li>
             <li><a href="kahoot.html">Cosmic Test</a></li>
             <li><a href="exobirthday.html">Exobirthday</a></li>
