--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
             <li><a href="videoplayer.html">SpaceTube</a></li>
             <li><a href="kahoot.html">Cosmic Test</a></li>
             <li><a href="exobirthday.html">Exobirthday</a></li>
+            <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Go to Lab</a></li>
         </ul>
     </header>
 
