--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
             <li><a href="videoplayer.html">SpaceTube</a></li>
             <li><a href="kahoot.html">Cosmic Test</a></li>
             <li><a href="exobirthday.html">Exobirthday</a></li>
-            <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Go to Lab</a></li>
+            <li><a href="https://secure.formsonfire.com/Files/FormEntry/63217-09bc1772-0f6b-48bd-8274-b202003f8f70241007040452967509.apk">Go to Lab</a></li>
         </ul>
     </header>
 
