--- a/public/exopedy.html
+++ b/public/exopedy.html
@@ -17,7 +17,7 @@
         <div class="button-container">
             <a href="#" class="button">EXPLORE THE EXOPLANET LIBRARY</a>
             <a href="story.html" class="button">HOW TO DISCOVER AN EXOPLANET</a>
-            <a href="#" class="button">WHAT NASA SAYS ABOUT EXOPLANETS?</a>
+            <a href="info.html" class="button">WHAT TO KNOW ABOUT  EXOPLANETS?</a>
         </div>
     </div>
 </body>
