--- a/public/videoplayer.html
+++ b/public/videoplayer.html
@@ -16,14 +16,14 @@
         <a class="btn btn-secondary" id="back" href="index.html">Back</a>
         <div class="main-video">
             <div class="video">
-                <video src="https://youtu.be/z-6xK5dtubQ" controls muted autoplay></video>
+                <video src="Video1.mp4" controls muted autoplay></video>
                 <h3 class="title">01. Kepler - 11 f - BEYONDSIGHT Team</h3>
             </div>
         </div>
 
         <div class="video-list">
             <div class="vid active">
-                <video src="https://youtu.be/z-6xK5dtubQ" controls muted></video>
+                <video src="Video1.mp4" controls muted></video>
                 <h3 class="title">01. Kepler - 11 f - BEYONDSIGHT Team</h3>
             </div>
 
