--- a/public/index.html
+++ b/public/index.html
@@ -17,12 +17,12 @@
         <div class="menu-icon" id="menu-toggle">☰</div> <!-- Botón de menú -->
         <ul id="nav-list">
             <li><a href="index.html">Home</a></li>
-            <li><a href="#">Meet us</a></li>
+            <li><a href="aboutus.html">Meet us</a></li>
             <li><a href="exopedy.html">Exopedy</a></li>
             <li><a href="videoplayer.html">SpaceTube</a></li>
-            <li><a href="#">Cosmic Test</a></li>
+            <li><a href="kahoot.html">Cosmic Test</a></li>
             <li><a href="exobirthday.html">Exobirthday</a></li>
-            <li><a href="#">Go To Lab!</a></li>
+            <li><a href="https://secure.formsonfire.com/Files/FormEntry/63217-09bc1772-0f6b-48bd-8274-b202003f8f70241007040452967509.apk">Go To Lab!</a></li>
         </ul>
     </header>
 
