--- a/public/exopedy.html
+++ b/public/exopedy.html
@@ -15,7 +15,7 @@
         <h1>YOUR EXOPEDY</h1>
         <p>Learn more about new worlds on your own with these resources and voyage through the cosmos.</p>
         <div class="button-container">
-            <a href="#" class="button">EXPLORE THE EXOPLANET LIBRARY</a>
+            <a href="carrete.html" class="button">EXPLORE THE EXOPLANET LIBRARY</a>
             <a href="story.html" class="button">HOW TO DISCOVER AN EXOPLANET</a>
             <a href="info.html" class="button">WHAT TO KNOW ABOUT  EXOPLANETS?</a>
         </div>
