--- a/public/exobirthday.html
+++ b/public/exobirthday.html
@@ -61,8 +61,8 @@
     </div>
 
     <div class="fixed-buttons">
-        <button class="btn-custom">Make your Exomonth Poster</button>
-        <button class="btn-custom">Want to learn more?</button>
+        <button class="btn-custom" onclick="window.location.href="AI.html">Make your Exomonth Poster</button>
+<button class="btn-custom" onclick="window.location.href='https://exoplanets.nasa.gov/alien-worlds/exoplanet-travel-bureau/?intent=021'>Want to learn more?</button>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
