--- a/public/exobirthday.html
+++ b/public/exobirthday.html
@@ -62,7 +62,8 @@
 
     <div class="fixed-buttons">
         <button class="btn-custom" onclick="window.location.href="AI.html">Make your Exomonth Poster</button>
-<button class="btn-custom" onclick="window.location.href='https://exoplanets.nasa.gov/alien-worlds/exoplanet-travel-bureau/?intent=021'>Want to learn more?</button>
+       <button class="btn-custom" onclick="window.location.href='https://exoplanets.nasa.gov/alien-worlds/exoplanet-travel-bureau/?intent=021'">Want to learn more?</button>
+
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
