--- a/public/carrete.html
+++ b/public/carrete.html
@@ -10,22 +10,18 @@
 </head>
 <body>
 
-    <!-- Logo en la esquina superior izquierda -->
-    <div class="logo">
-        <img src="img/logo.png" alt="Logo" class="img-fluid"/>
-    </div>
 
-    <!-- Cartas interactivas con Bootstrap -->
+  
     <div class="container mt-5">
         <div class="row justify-content-center">
-            <!-- Tarjeta 1 -->
-            <div class="col-md-6">
-                <div class="card text-white bg-dark mb-3">
+  
+            <div class="col-md-8 col-lg-6 mb-4">
+                <div class="card text-white bg-dark h-100">
                     <div class="row no-gutters">
-                        <div class="col-md-4">
+                        <div class="col-12 col-md-4">
                             <img src="img/planeta1.jpeg" class="card-img" alt="Jinx Image">
                         </div>
-                        <div class="col-md-8">
+                        <div class="col-12 col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">PSR B1620-26 b</h5>
                                 <p class="card-text">This is a very, very old planet. It's so old that it was around when the universe was still young.</p>
@@ -36,9 +32,9 @@
                 </div>
             </div>
 
-            <!-- Tarjeta extendida 1 (inicialmente oculta) -->
-            <div class="col-md-6 extra-info" id="extra-info-1" style="display: none;">
-                <div class="card text-white bg-dark mb-3">
+   
+            <div class="col-md-8 col-lg-6 mb-4 extra-info" id="extra-info-1" style="display: none;">
+                <div class="card text-white bg-dark h-100">
                     <div class="card-body">
                         <h5 class="card-title">PSR B1620-26 b - Detailed Information</h5>
                         <p>Orbits two stars, providing insights into planet formation in the early universe. Very distant from Earth.</p>
@@ -48,13 +44,13 @@
             </div>
 
             <!-- Tarjeta 2 -->
-            <div class="col-md-6">
-                <div class="card text-white bg-dark mb-3">
+            <div class="col-md-8 col-lg-6 mb-4">
+                <div class="card text-white bg-dark h-100">
                     <div class="row no-gutters">
-                        <div class="col-md-4">
+                        <div class="col-12 col-md-4">
                             <img src="img/planeta2.jpeg" class="card-img" alt="Yasuo Image">
                         </div>
-                        <div class="col-md-8">
+                        <div class="col-12 col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">Kepler-11 f</h5>
                                 <p class="card-text">Kepler-11 f is part of a big family of planets living close to a star, like siblings in a small house.</p>
@@ -65,9 +61,9 @@
                 </div>
             </div>
 
-            <!-- Tarjeta extendida 2 (inicialmente oculta) -->
-            <div class="col-md-6 extra-info" id="extra-info-2" style="display: none;">
-                <div class="card text-white bg-dark mb-3">
+            
+            <div class="col-md-8 col-lg-6 mb-4 extra-info" id="extra-info-2" style="display: none;">
+                <div class="card text-white bg-dark h-100">
                     <div class="card-body">
                         <h5 class="card-title">Kepler-11 f - Detailed Information</h5>
                         <p>Part of a system with six planets close to their star. Helps scientists study planetary formation and systems.</p>
@@ -77,13 +73,13 @@
             </div>
 
             <!-- Tarjeta 3 -->
-            <div class="col-md-6">
-                <div class="card text-white bg-dark mb-3">
+            <div class="col-md-8 col-lg-6 mb-4">
+                <div class="card text-white bg-dark h-100">
                     <div class="row no-gutters">
-                        <div class="col-md-4">
+                        <div class="col-12 col-md-4">
                             <img src="img/planeta3.jpeg" class="card-img" alt="Ahri Image">
                         </div>
-                        <div class="col-md-8">
+                        <div class="col-12 col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">Kepler-452b</h5>
                                 <p class="card-text">Kepler-452b is like Earth's bigger cousin, a bit larger and possibly with water.</p>
@@ -95,8 +91,8 @@
             </div>
 
             <!-- Tarjeta extendida 3 (inicialmente oculta) -->
-            <div class="col-md-6 extra-info" id="extra-info-3" style="display: none;">
-                <div class="card text-white bg-dark mb-3">
+            <div class="col-md-8 col-lg-6 mb-4 extra-info" id="extra-info-3" style="display: none;">
+                <div class="card text-white bg-dark h-100">
                     <div class="card-body">
                         <h5 class="card-title">Kepler-452b - Detailed Information</h5>
                         <p>A rocky planet with potential conditions for liquid water, orbiting in the habitable zone of a Sun-like star.</p>
@@ -104,8 +100,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-
         </div>
 
         <!-- Botón Back to Home -->
@@ -138,5 +132,3 @@
 
 </body>
 </html>
-
-
