--- a/public/carrete.html
+++ b/public/carrete.html
@@ -4,25 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interactive Cards with Bootstrap</title>
-    <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="carrete.css">
+    <link rel="stylesheet" href="css/carrete.css">
 </head>
 <body>
 
-  
-
-    <!-- Cartas interactivas con Bootstrap -->
     <div class="container mt-5">
         <div class="row justify-content-center">
-            <!-- Tarjeta 1 -->
-            <div class="col-md-8 col-lg-6 mb-4">
-                <div class="card text-white bg-dark h-100">
+            <div class="col-md-6">
+                <div class="card text-white bg-dark mb-3 scrollable-card">
                     <div class="row no-gutters">
-                        <div class="col-12 col-md-4">
-                            <img src="planeta1.jpeg" class="card-img" alt="Jinx Image">
-                        </div>
-                        <div class="col-12 col-md-8">
+                        <div class="col-md-12">
+                            <img src="img/planeta1.jpeg" class="card-img-top" alt="PSR B1620-26 b">
                             <div class="card-body">
                                 <h5 class="card-title">PSR B1620-26 b</h5>
                                 <p class="card-text">This is a very, very old planet. It's so old that it was around when the universe was still young.</p>
@@ -33,9 +26,8 @@
                 </div>
             </div>
 
-            <!-- Tarjeta extendida 1 (inicialmente oculta) -->
-            <div class="col-md-8 col-lg-6 mb-4 extra-info" id="extra-info-1" style="display: none;">
-                <div class="card text-white bg-dark h-100">
+            <div class="col-md-6 extra-info" id="extra-info-1" style="display: none;">
+                <div class="card text-white bg-dark mb-3 scrollable-card">
                     <div class="card-body">
                         <h5 class="card-title">PSR B1620-26 b - Detailed Information</h5>
                         <p>Orbits two stars, providing insights into planet formation in the early universe. Very distant from Earth.</p>
@@ -44,14 +36,11 @@
                 </div>
             </div>
 
-            <!-- Tarjeta 2 -->
-            <div class="col-md-8 col-lg-6 mb-4">
-                <div class="card text-white bg-dark h-100">
+            <div class="col-md-6">
+                <div class="card text-white bg-dark mb-3 scrollable-card">
                     <div class="row no-gutters">
-                        <div class="col-12 col-md-4">
-                            <img src="img/planeta2.jpeg" class="card-img" alt="Yasuo Image">
-                        </div>
-                        <div class="col-12 col-md-8">
+                        <div class="col-md-12">
+                            <img src="img/planeta2.jpeg" class="card-img-top" alt="Kepler-11 f">
                             <div class="card-body">
                                 <h5 class="card-title">Kepler-11 f</h5>
                                 <p class="card-text">Kepler-11 f is part of a big family of planets living close to a star, like siblings in a small house.</p>
@@ -62,9 +51,8 @@
                 </div>
             </div>
 
-            <!-- Tarjeta extendida 2 (inicialmente oculta) -->
-            <div class="col-md-8 col-lg-6 mb-4 extra-info" id="extra-info-2" style="display: none;">
-                <div class="card text-white bg-dark h-100">
+            <div class="col-md-6 extra-info" id="extra-info-2" style="display: none;">
+                <div class="card text-white bg-dark mb-3 scrollable-card">
                     <div class="card-body">
                         <h5 class="card-title">Kepler-11 f - Detailed Information</h5>
                         <p>Part of a system with six planets close to their star. Helps scientists study planetary formation and systems.</p>
@@ -73,14 +61,11 @@
                 </div>
             </div>
 
-            <!-- Tarjeta 3 -->
-            <div class="col-md-8 col-lg-6 mb-4">
-                <div class="card text-white bg-dark h-100">
+            <div class="col-md-6">
+                <div class="card text-white bg-dark mb-3 scrollable-card">
                     <div class="row no-gutters">
-                        <div class="col-12 col-md-4">
-                            <img src="img/planeta3.jpeg" class="card-img" alt="Ahri Image">
-                        </div>
-                        <div class="col-12 col-md-8">
+                        <div class="col-md-12">
+                            <img src="img/planeta3.jpeg" class="card-img-top" alt="Kepler-452b">
                             <div class="card-body">
                                 <h5 class="card-title">Kepler-452b</h5>
                                 <p class="card-text">Kepler-452b is like Earth's bigger cousin, a bit larger and possibly with water.</p>
@@ -91,9 +76,8 @@
                 </div>
             </div>
 
-            <!-- Tarjeta extendida 3 (inicialmente oculta) -->
-            <div class="col-md-8 col-lg-6 mb-4 extra-info" id="extra-info-3" style="display: none;">
-                <div class="card text-white bg-dark h-100">
+            <div class="col-md-6 extra-info" id="extra-info-3" style="display: none;">
+                <div class="card text-white bg-dark mb-3 scrollable-card">
                     <div class="card-body">
                         <h5 class="card-title">Kepler-452b - Detailed Information</h5>
                         <p>A rocky planet with potential conditions for liquid water, orbiting in the habitable zone of a Sun-like star.</p>
@@ -103,18 +87,15 @@
             </div>
         </div>
 
-        <!-- Botón Back to Home -->
         <div class="text-center mt-4">
             <a href="index.html" class="btn btn-secondary">Back to Home</a>
         </div>
     </div>
 
-    <!-- Bootstrap JS and dependencies -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-    <!-- JavaScript para mostrar/ocultar info adicional -->
     <script>
         document.querySelectorAll('.more-info-btn').forEach(button => {
             button.addEventListener('click', function() {
