--- a/public/carrete.html
+++ b/public/carrete.html
@@ -33,7 +33,8 @@
                     </div>
                 </div>
             </div>
-
+         </div>
+        </div>
             <div class="col-md-6">
                 <div class="card text-white bg-dark mb-3 scrollable-card">
                     <div class="row no-gutters">
