--- a/public/carrete.html
+++ b/public/carrete.html
@@ -10,10 +10,10 @@
 <body>
     <div class="container mt-5">
         <div class="row justify-content-center">
-            <!-- Primera tarjeta -->
+            <!-- Tarjeta 1 -->
             <div class="col-md-6">
                 <div class="card text-white bg-dark mb-3 scrollable-card">
-                    <img src="img/planeta1.jpeg" class="card-img-top" alt="PSR B1620-26 b"> <!-- Asegúrate de que este archivo exista -->
+                    <img src="img/planeta1.jpeg" class="card-img-top" alt="PSR B1620-26 b">
                     <div class="card-body">
                         <h5 class="card-title">PSR B1620-26 b</h5>
                         <p class="card-text">This is a very, very old planet. It's so old that it was around when the universe was still young.</p>
@@ -30,7 +30,7 @@
                     </div>
                 </div>
             </div>
-            <!-- Segunda tarjeta -->
+            <!-- Tarjeta 2 -->
             <div class="col-md-6">
                 <div class="card text-white bg-dark mb-3 scrollable-card">
                     <img src="img/planeta2.jpeg" class="card-img-top" alt="Kepler-11 f">
