--- a/public/carrete.html
+++ b/public/carrete.html
@@ -11,42 +11,88 @@
     <div class="container mt-5">
         <div class="row justify-content-center">
             <!-- Tarjeta 1 -->
-            <div class="col-md-6">
-                <div class="card text-white bg-dark mb-3 scrollable-card">
-                    <img src="img/planeta1.jpeg" class="card-img-top" alt="PSR B1620-26 b">
-                    <div class="card-body">
-                        <h5 class="card-title">PSR B1620-26 b</h5>
-                        <p class="card-text">This is a very, very old planet. It's so old that it was around when the universe was still young.</p>
-                        <button class="btn btn-light more-info-btn" data-target="#extra-info-1">More info</button>
-                    </div>
-                </div>
-                <div class="extra-info" id="extra-info-1" style="display: none;">
-                    <div class="card text-white bg-dark mb-3 scrollable-card">
-                        <div class="card-body">
-                            <h5 class="card-title">PSR B1620-26 b - Detailed Information</h5>
-                            <p>Orbits two stars, providing insights into planet formation in the early universe. Very distant from Earth.</p>
-                            <button class="btn btn-light hide-info-btn" data-target="#extra-info-1">Show less</button>
+            <div class="col-md-8 col-lg-6 mb-4">
+                <div class="card text-white bg-dark h-100">
+                    <div class="row no-gutters">
+                        <div class="col-12 col-md-4">
+                            <img src="img/planeta1.jpeg" class="card-img" alt="Jinx Image">
+                        </div>
+                        <div class="col-12 col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">PSR B1620-26 b</h5>
+                                <p class="card-text">This is a very, very old planet. It's so old that it was around when the universe was still young.</p>
+                                <button class="btn btn-light more-info-btn" data-target="#extra-info-1">More info</button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <!-- Tarjeta 2 -->
-            <div class="col-md-6">
-                <div class="card text-white bg-dark mb-3 scrollable-card">
-                    <img src="img/planeta2.jpeg" class="card-img-top" alt="Kepler-11 f">
+
+            <!-- Tarjeta extendida 1 (inicialmente oculta) -->
+            <div class="col-md-8 col-lg-6 mb-4 extra-info" id="extra-info-1" style="display: none;">
+                <div class="card text-white bg-dark h-100">
                     <div class="card-body">
-                        <h5 class="card-title">Kepler-11 f</h5>
-                        <p class="card-text">Kepler-11 f is part of a big family of planets living close to a star, like siblings in a small house.</p>
-                        <button class="btn btn-light more-info-btn" data-target="#extra-info-2">More info</button>
+                        <h5 class="card-title">PSR B1620-26 b - Detailed Information</h5>
+                        <p>Orbits two stars, providing insights into planet formation in the early universe. Very distant from Earth.</p>
+                        <button class="btn btn-light hide-info-btn" data-target="#extra-info-1">Show less</button>
                     </div>
                 </div>
-                <div class="extra-info" id="extra-info-2" style="display: none;">
-                    <div class="card text-white bg-dark mb-3 scrollable-card">
-                        <div class="card-body">
-                            <h5 class="card-title">Kepler-11 f - Detailed Information</h5>
-                            <p>Part of a system with multiple planets, known for its interesting orbital characteristics.</p>
-                            <button class="btn btn-light hide-info-btn" data-target="#extra-info-2">Show less</button>
+            </div>
+
+            <!-- Tarjeta 2 -->
+            <div class="col-md-8 col-lg-6 mb-4">
+                <div class="card text-white bg-dark h-100">
+                    <div class="row no-gutters">
+                        <div class="col-12 col-md-4">
+                            <img src="img/planeta2.jpeg" class="card-img" alt="Yasuo Image">
                         </div>
+                        <div class="col-12 col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Kepler-11 f</h5>
+                                <p class="card-text">Kepler-11 f is part of a big family of planets living close to a star, like siblings in a small house.</p>
+                                <button class="btn btn-light more-info-btn" data-target="#extra-info-2">More info</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Tarjeta extendida 2 (inicialmente oculta) -->
+            <div class="col-md-8 col-lg-6 mb-4 extra-info" id="extra-info-2" style="display: none;">
+                <div class="card text-white bg-dark h-100">
+                    <div class="card-body">
+                        <h5 class="card-title">Kepler-11 f - Detailed Information</h5>
+                        <p>Part of a system with six planets close to their star. Helps scientists study planetary formation and systems.</p>
+                        <button class="btn btn-light hide-info-btn" data-target="#extra-info-2">Show less</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Tarjeta 3 -->
+            <div class="col-md-8 col-lg-6 mb-4">
+                <div class="card text-white bg-dark h-100">
+                    <div class="row no-gutters">
+                        <div class="col-12 col-md-4">
+                            <img src="img/planeta3.jpeg" class="card-img" alt="Ahri Image">
+                        </div>
+                        <div class="col-12 col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Kepler-452b</h5>
+                                <p class="card-text">Kepler-452b is like Earth's bigger cousin, a bit larger and possibly with water.</p>
+                                <button class="btn btn-light more-info-btn" data-target="#extra-info-3">More info</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Tarjeta extendida 3 (inicialmente oculta) -->
+            <div class="col-md-8 col-lg-6 mb-4 extra-info" id="extra-info-3" style="display: none;">
+                <div class="card text-white bg-dark h-100">
+                    <div class="card-body">
+                        <h5 class="card-title">Kepler-452b - Detailed Information</h5>
+                        <p>A rocky planet with potential conditions for liquid water, orbiting in the habitable zone of a Sun-like star.</p>
+                        <button class="btn btn-light hide-info-btn" data-target="#extra-info-3">Show less</button>
                     </div>
                 </div>
             </div>
